Reset completed admission state before pooled event reuse